force-app/main/default/objects/Product2/fields/IsDigital__c.field-meta.xml
<CustomField>
        <fullName>IsDigital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDigital</label>
        <type>Checkbox</type>
    </CustomField>