force-app/main/default/objects/Product2/fields/Saturday__c.field-meta.xml
<CustomField>
        <fullName>Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </CustomField>