force-app/main/default/objects/Product2/fields/Special_Section__c.field-meta.xml
<CustomField>
        <fullName>Special_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Section</label>
        <type>Checkbox</type>
    </CustomField>