force-app/main/default/objects/Product2/fields/Thursday__c.field-meta.xml
<CustomField>
        <fullName>Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </CustomField>