force-app/main/default/objects/Product2/fields/Wednesday__c.field-meta.xml
<CustomField>
        <fullName>Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </CustomField>